adiciona passivos e repasses profissionais
